@@ -4,6 +4,8 @@ PostGIS 2.4.8
   * Bug Fixes and Enhancements *
 
   - #4361, Fix postgis_type_name with (GEOMETRYM,3) (Matt Bretl)
+  - #4326, Fix circular arc distance calculation (Paul Ramsey)
+
 
 PostGIS 2.4.7
 2019/03/11
